# advent_of_code

./: .gitignore  CMakeLists.txt  README.md
2024/: CMakeLists.txt  README.md
2024/day01/: CMakeLists.txt
2024/day02/: part1.cpp
2024/day03/: part1.cpp
2024/day04/: part1.cpp
2024/day05/: CMakeLists.txt
2024/day06/: CMakeLists.txt  part1.cpp  part2.cpp
2024/day07/: CMakeLists.txt
2024/day08/: CMakeLists.txt  part2.cpp
2024/day09/: CMakeLists.txt  part2.cpp
2024/day10/: CMakeLists.txt  part1.cpp
2024/day11/: CMakeLists.txt  part1.cpp  part2.cpp
2024/day12/: CMakeLists.txt  part2.cpp
2024/day13/: part1.cpp
2024/day14/: part1.cpp  part2.cpp
2024/day15/: CMakeLists.txt  part1.cpp  part2.cpp
2024/day16/: part2.cpp
2024/day17/: CMakeLists.txt  part1.cpp
2024/day18/: CMakeLists.txt
2024/day19/: part1.cpp  part2.cpp
2024/day20/: part2.cpp
2024/day21/: part1.cpp
2024/day22/: CMakeLists.txt  part1.cpp
2024/day23/: part1.cpp  part2.cpp
2024/day25/: CMakeLists.txt  puzzle_input.txt
2025/: CMakeLists.txt  README.md
2025/day01/: day01.cpp
2025/day02/: day02.cpp
2025/day03/: day03.cpp
2025/day04/: day04.cpp
2025/day05/: day05.cpp
2025/day06/: day06.cpp
2025/day07/: day07.cpp
day1/: part2.cpp
day10/: part1.cpp  part2.cpp
day12/: part1  part1.cpp
day13/: CMakeLists.txt  part2.cpp
day14/: CMakeLists.txt
day15/: part1.cpp
day16/: CMakeLists.txt  part1.cpp
day17/: operations.txt  part1.cpp  part2.cpp  puzzle_input.txt
day18/: part1.cpp  part2.cpp
day19/: CMakeLists.txt
day2/: CMakeLists.txt  part2.cpp
day20/: CMakeLists.txt  part1.cpp
day21/: CMakeLists.txt  part2.cpp
day22/: part2.cpp
day23/: CMakeLists.txt
day24/: CMakeLists.txt  part1.cpp  part2.cpp
day25/: part1.cpp
day3/: CMakeLists.txt  part2.cpp
day4/: CMakeLists.txt  part2.cpp
day5/: part1.cpp  part2.cpp
day7/: part1.cpp  part2.cpp
day8/: part1.cpp
day9/: part1.cpp  part2.cpp
day_1/: CMakeLists.txt  a.out  part_1  part_1.cpp  part_2  part_2.cpp
